@@ -1,0 +1,16 @@
+Text      test2~
+Body            test2
+~
+Name      Rumble~
+Level     34
+Room      1204
+Flags     1 0 0 0
+End
+Text       test 5~
+Body      test5
+~
+Name      Rumble~
+Level     34
+Room      1204
+Flags     0 0 0 0
+End
