@@ -857,21 +857,21 @@ const char *otrig_types[] = {
   "Global",
   "Random",
   "Command",
-  "UNUSED",
-  "UNUSED",
+  "UNUSED1",
+  "UNUSED2",
   "Timer",
   "Get",
   "Drop",
   "Give",
   "Wear",
-  "UNUSED",
+  "UNUSED3",
   "Remove",
-  "UNUSED",
+  "UNUSED4",
   "Load",
-  "UNUSED",
+  "UNUSED5",
   "Cast",
   "Leave",
-  "UNUSED",
+  "UNUSED6",
   "Consume",
   "Time",
   "\n"
@@ -883,17 +883,17 @@ const char *wtrig_types[] = {
   "Random",
   "Command",
   "Speech",
-  "UNUSED",
+  "UNUSED1",
   "Zone Reset",
   "Enter",
   "Drop",
-  "UNUSED",
-  "UNUSED",
-  "UNUSED",
-  "UNUSED",
-  "UNUSED",
-  "UNUSED",
-  "UNUSED",
+  "UNUSED2",
+  "UNUSED3",
+  "UNUSED4",
+  "UNUSED5",
+  "UNUSED6",
+  "UNUSED7",
+  "UNUSED8",
   "Cast",
   "Leave",
   "Door",
